# atcoder-discord-bot

./: .gitignore  Cargo.toml  README.md
migrations/: 20210121175336_init.sql  20210122155412_fix_nullable.sql  20210122163853_add_submission.sql  20210124123016_fix_submission_column_name.sql  20210124134524_fix_non_null_constraint.sql  20210224165429_user_stat.sql
src/: data.rs  database.rs  error.rs  event_handler.rs  http.rs  main.rs  utils.rs
src/commands/: help.rs  mod.rs
src/commands/account/: mod.rs  register.rs  subscribe.rs  unregister.rs  unsubscribe.rs
src/commands/general/: adder.rs  invite.rs  mod.rs  source.rs
src/commands/settings/: start.rs  stop.rs
src/commands/stat/: mod.rs  point_sum.rs  problem_count.rs  streak.rs
src/models/: account.rs  guild.rs  mod.rs  submission.rs  user_stat.rs
src/tasks/: ac_fetcher.rs  mod.rs  stat_updater.rs  submitter.rs
