[package]
name = "atcoder-discord-bot"
version = "0.0.1"
authors = ["Tomoya Ishii <tmy1997530@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10" }
log = { version = "0.4" }
env_logger = { version = "0.8" }
dotenv = { version = "0.15" }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.4", features = ["macros", "postgres", "uuid", "offline", "chrono", "runtime-tokio-rustls", "postgres"]}
chrono = { version = "0.4" }
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = { version = "1.0" }
serde_derive = { version = "1.0" }

tokio-compat-02 = { version = "0.2" }
